@@ -7,6 +7,8 @@ import com.rookies3.myspringbootlab.exception.BusinessException;
 import com.rookies3.myspringbootlab.exception.ErrorCode;
 import com.rookies3.myspringbootlab.repository.BookDetailRepository;
 import com.rookies3.myspringbootlab.repository.BookRepository;
+
+import com.rookies3.myspringbootlab.repository.PublisherRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -18,54 +20,66 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
-//읽기전용모드 (성능 최적화)
 public class BookService {
+
     private final BookRepository bookRepository;
     private final BookDetailRepository bookDetailRepository;
+    private final PublisherRepository publisherRepository;
 
     public List<BookDTO.Response> getAllBooks() {
         return bookRepository.findAll()
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public BookDTO.Response getBookById(Long id) {
         Book book = bookRepository.findByIdWithBookDetail(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
-                        "Book", "id", id));
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
         return BookDTO.Response.fromEntity(book);
     }
 
     public BookDTO.Response getBookByIsbn(String isbn) {
         Book book = bookRepository.findByIsbnWithBookDetail(isbn)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
-                        "Book", "isbn", isbn));
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "ISBN", isbn));
         return BookDTO.Response.fromEntity(book);
     }
 
-    public List<BookDTO.Response> getBooksByAuthor(String author){
+    public List<BookDTO.Response> getBooksByAuthor(String author) {
         return bookRepository.findByAuthorContainingIgnoreCase(author)
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<BookDTO.Response> getBooksByTitle(String title){
+    public List<BookDTO.Response> getBooksByTitle(String title) {
         return bookRepository.findByTitleContainingIgnoreCase(title)
                 .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    public List<BookDTO.Response> getBooksByPublisherId(Long publisherId){
+        if (!publisherRepository.existsById(publisherId)){
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
+                    "Publisher", "id", publisherId);
+        }
+        return bookRepository.findByPublisherId(publisherId)
+                .stream()
+                .map(BookDTO.Response::fromEntity)
+                .toList();
+    }
+
+
 
     @Transactional
     public BookDTO.Response createBook(BookDTO.Request request) {
+        // Validate ISBN is not already in use
         if (bookRepository.existsByIsbn(request.getIsbn())) {
-            throw new BusinessException(ErrorCode.ISBN_DUPLICATE,
-                    request.getIsbn());
+            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
 
-
+        // Create book entity
         Book book = Book.builder()
                 .title(request.getTitle())
                 .author(request.getAuthor())
@@ -74,62 +88,67 @@ public class BookService {
                 .publishDate(request.getPublishDate())
                 .build();
 
+        // Create book detail if provided
         if (request.getDetailRequest() != null) {
             BookDetail bookDetail = BookDetail.builder()
-                    .edition(request.getDetailRequest().getEdition())
-                    .language(request.getDetailRequest().getLanguage())
                     .description(request.getDetailRequest().getDescription())
+                    .language(request.getDetailRequest().getLanguage())
+                    .pageCount(request.getDetailRequest().getPageCount())
                     .publisher(request.getDetailRequest().getPublisher())
                     .coverImageUrl(request.getDetailRequest().getCoverImageUrl())
-                    .pageCount(request.getDetailRequest().getPageCount())
+                    .edition(request.getDetailRequest().getEdition())
+                    //연관관계 저장
                     .book(book)
                     .build();
+            //연관관계 저장
             book.setBookDetail(bookDetail);
         }
 
+        // Save and return the book
         Book savedBook = bookRepository.save(book);
         return BookDTO.Response.fromEntity(savedBook);
     }
 
     @Transactional
     public BookDTO.Response updateBook(Long id, BookDTO.Request request) {
+        // Find the book
         Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
-                        "Book", "id", id));
+                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
 
+        // Check if another book already has the ISBN
         if (!book.getIsbn().equals(request.getIsbn()) &&
                 bookRepository.existsByIsbn(request.getIsbn())) {
-            throw new BusinessException(ErrorCode.EMAIL_DUPLICATE,
-                    request.getIsbn());
+            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
 
+        // Update book basic info
         book.setTitle(request.getTitle());
         book.setAuthor(request.getAuthor());
-        book.setPublishDate(request.getPublishDate());
+        book.setIsbn(request.getIsbn());
         book.setPrice(request.getPrice());
+        book.setPublishDate(request.getPublishDate());
 
+        // Update book detail if provided
         if (request.getDetailRequest() != null) {
             BookDetail bookDetail = book.getBookDetail();
 
+            // Create new detail if not exists
             if (bookDetail == null) {
                 bookDetail = new BookDetail();
                 bookDetail.setBook(book);
                 book.setBookDetail(bookDetail);
             }
 
-            if (isIsbnChangingAndExists(book, request)) {
-                throw new BusinessException(ErrorCode.ISBN_DUPLICATE,
-                        request.getIsbn());
-            }
-
-            bookDetail.setEdition(request.getDetailRequest().getEdition());
-            bookDetail.setPublisher(request.getDetailRequest().getPublisher());
+            // Update detail fields
             bookDetail.setDescription(request.getDetailRequest().getDescription());
             bookDetail.setLanguage(request.getDetailRequest().getLanguage());
-            bookDetail.setCoverImageUrl(request.getDetailRequest().getCoverImageUrl());
             bookDetail.setPageCount(request.getDetailRequest().getPageCount());
+            bookDetail.setPublisher(request.getDetailRequest().getPublisher());
+            bookDetail.setCoverImageUrl(request.getDetailRequest().getCoverImageUrl());
+            bookDetail.setEdition(request.getDetailRequest().getEdition());
         }
 
+        // Save and return updated book
         Book updatedBook = bookRepository.save(book);
         return BookDTO.Response.fromEntity(updatedBook);
     }
@@ -137,19 +156,9 @@ public class BookService {
     @Transactional
     public void deleteBook(Long id) {
         if (!bookRepository.existsById(id)) {
-            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND,
-                    "Book", "id", id);
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id);
         }
         bookRepository.deleteById(id);
-    }
-
-    private boolean isIsbnChangingAndExists(Book currentDetail,
-                                             BookDTO.Request newDetail) {
-        return newDetail.getIsbn() != null &&
-                !newDetail.getIsbn().isEmpty() &&
-                (currentDetail.getIsbn() == null ||
-                        !currentDetail.getIsbn().equals(newDetail.getIsbn())) &&
-                bookRepository.existsByIsbn(newDetail.getIsbn());
     }
 
 }
